# junchi

./: .gitignore  Cargo.toml  README.md
server/: .env  Cargo.toml  package.json  run.sh
server/migrations/2020-06-27-142151_create_posts/: up.sql
server/src/: lib.rs  main.rs  models.rs  schema.rs
website/: Cargo.toml  package.json
website/src/: app.rs  lib.rs
website/static/: index.html  index.js
