[package]
name = "server"
version = "0.1.0"
authors = ["sinvy <zhaixinyu@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^2.0"
actix-rt = "^1.0"
listenfd = "0.3"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
dotenv = "0.15"
serde = "1.0.114"
actix = "^0.9"
r2d2 = "0.8.8"
